# findmyphone

./: Makefile  manage.py  pyproject.toml
common/: models.py
findmyphone/: asgi.py  settings.py  urls.py  wsgi.py
phones/: models.py  serializers.py  urls.py  views.py
phones/migrations/: 0001_initial.py
phones/tests/: test_routes.py
phones_locations/: apps.py  models.py  serializers.py  urls.py  views.py
phones_locations/migrations/: 0001_initial.py
phones_locations/tests/: test_routes.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
